# GIP2_Praktikum-3_Kapitel-3

./: CMakeLists.txt  input.txt  league.cpp  main.cpp  teamStatistics.cpp
inc/: league.hpp  teamStatistics.hpp
